# husfjelag

./: .gitignore  .gitmodules  CLAUDE.md  README.md  STYLE.md  TODO.md  dev.sh
HusfelagPy/: .env.example  .gitignore  README.md  conftest.py  gunicorn.conf.py  pyproject.toml  pytest.ini  requirements.txt
HusfelagPy/associations/: admin.py  categoriser.py  importers.py  models.py  notifications.py  scraper.py  serializers.py  skattur_cloud.py  tests.py  transfer_detector.py  urls.py  views.py
HusfelagPy/associations/banks/: arion.py  audit.py  base_provider.py  consent_store.py  dispatch.py  health.py  islandsbanki.py  landsbankinn.py  landsbankinn_provider.py  oauth_client.py  provider_base.py  tasks.py  views.py
HusfelagPy/associations/migrations/: 0001_initial.py  0002_remove_apartment_size_apartment_share_2_and_more.py  0003_apartment_share_3.py  0004_apartment_deleted.py  0005_apartmentownership_deleted.py  0006_alter_budgetitem_amount_category_and_more.py  0007_alter_budget_unique_together_budget_is_active_and_more.py  0008_apartment_size.py  0009_add_hmsimportsource.py  0010_apartment_unique_assoc_fnr.py  0011_hmsimportsource_landeign_stadfang.py  0012_category_global.py  0013_accountingkey.py  0014_category_accounting_fks.py  0015_bankaccount.py  0016_transaction.py  0017_categoryrule.py  0018_collection_paid_transaction_and_more.py  0019_association_registry_fields.py  0020_bank_consent_and_transaction_source.py  (+14 more)
HusfelagPy/config/: celery.py  urls.py
HusfelagPy/users/: authentication.py  models.py  oidc.py  serializers.py  tests.py  urls.py  views.py
(+116 files in other folders)
